test/oscar/compiler/errors/miscEquality.oscar
message testNow()


actor Tester() {
  
  receive = {
    | testNow() => {
        println(1 == 1.0);
    }
  }
}

def main() => unit = {
  actor<Tester> tester = spawn actor<Tester>();
  message<testNow>() |> tester;
}